--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <main>
-        <img src="imagens/Pokedex.png" alt="pokedex" class="pokedex">
+        <img src="imagens/pokedex.png" alt="pokedex" class="pokedex">
         <img src="#" alt="pokemom" class="pokemom__image">
 
         <h1 class="pokemom__data">
